# mtsTrueTechChamp

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  task_1.cpp  task_2.cpp  task_3.cpp  vcpkg.json
